--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -1,6 +1,21 @@
 
 rabbit.interval=10
 
+# PostgreSQL
+
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.connection.url=jdbc:postgresql://127.0.0.1:5432/trackstudio
+hibernate.connection.driver_class=org.postgresql.Driver
+hibernate.connection.username=postgres
+hibernate.connection.password=password
+
+#url=jdbc:postgresql://localhost:5432/idea_db
+
+jdbc.url=jdbc:postgresql://127.0.0.1:5432/spammer
+jdbc.driver=org.postgresql.Driver
+jdbc.login=postgres
+jdbc.password=*#*Job4j
+
 jdbc.url=jdbc:postgresql://127.0.0.1:5432/spammer
 jdbc.driver=org.postgresql.Driver
 jdbc.username=postgres
