--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -20,3 +20,8 @@ jdbc.url=jdbc:postgresql://127.0.0.1:5432/schema
 jdbc.driver=org.postgresql.Driver
 jdbc.username=postgres
 jdbc.password=*#*Job4j
+
+jdbc.url=jdbc:postgresql://127.0.0.1:5432/schema
+jdbc.driver=org.postgresql.Driver
+jdbc.username=postgres
+jdbc.password=*#*Job4j
